# code/clients/typescript/openapi/customer.json
@@ -77,6 +77,33 @@
         ]
       }
     },
+    "/tenants/{tenantId}/modules": {
+      "get": {
+        "tags": [
+          "Tenant"
+        ],
+        "parameters": [
+          {
+            "name": "tenantId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "Bearer": [ ]
+          }
+        ]
+      }
+    },
     "/tenants/{tenantId}/transitions": {
       "post": {
         "tags": [
